Added a link behind each name in a generated HTML document.

--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -84,12 +84,13 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><div class="parameters"><div class="association">
+                            </div><div class="parameters">
+                            <div class="type">Parameters</div><div class="association">
                                     <div class="key" style="width:12ch">
                                         <div class="element symbol">type</div></div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element name">/bali/notary/Certificate/v1</div>
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/notary/Certificate/v1">/bali/notary/Certificate/v1</a></div>
                                     </div>
                                 </div><div class="association">
                                     <div class="key" style="width:12ch">
@@ -110,7 +111,7 @@
                                         <div class="element symbol">permissions</div></div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element name">/bali/permissions/public/v1</div>
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/permissions/public/v1">/bali/permissions/public/v1</a></div>
                                     </div>
                                 </div><div class="association">
                                     <div class="key" style="width:12ch">
@@ -144,12 +145,13 @@ A08XBV3FGK1P5GPM0RAZ9ZVG04XYVF3909XS9Z9SC0R
 </pre>
                         </div>
                     </div>
-                </div><div class="parameters"><div class="association">
+                </div><div class="parameters">
+                <div class="type">Parameters</div><div class="association">
                         <div class="key" style="width:5ch">
                             <div class="element symbol">type</div></div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element name">/bali/notary/Document/v1</div>
+                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/notary/Document/v1">/bali/notary/Document/v1</a></div>
                         </div>
                     </div>
                 </div>
