--- a/test/html/citation.html
+++ b/test/html/citation.html
@@ -59,12 +59,13 @@ GK9YPPC0P1RWZ74MHDBX3VGDD6ACA7R49L6DXDSQ70R
 </pre>
                         </div>
                     </div>
-                </div><div class="parameters"><div class="association">
+                </div><div class="parameters">
+                <div class="type">Parameters</div><div class="association">
                         <div class="key" style="width:5ch">
                             <div class="element symbol">type</div></div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element name">/bali/notary/Citation/v1</div>
+                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/notary/Citation/v1">/bali/notary/Citation/v1</a></div>
                         </div>
                     </div>
                 </div>
