--- a/test/html/components.html
+++ b/test/html/components.html
@@ -80,12 +80,13 @@
                                         <div class="item">
                                             <div class="element symbol">gamma</div>
                                         </div>
-                                    </div><div class="parameters"><div class="association">
+                                    </div><div class="parameters">
+                                    <div class="type">Parameters</div><div class="association">
                                             <div class="key" style="width:5ch">
                                                 <div class="element symbol">type</div></div>
                                             <div class="colon">:</div>
                                             <div class="value">
-                                                <div class="element name">/bali/collections/Set/v1</div>
+                                                <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/collections/Set/v1">/bali/collections/Set/v1</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -283,11 +284,11 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element name">/name</div>
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/name">/name</a></div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element name">/name (relative: false)</div>
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/name($relative: false)">/name($relative: false)</a> (relative: false)</div>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -385,12 +386,13 @@
                                             <div class="item">
                                                 <div class="element text">"sequence"</div>
                                             </div>
-                                        </div><div class="parameters"><div class="association">
+                                        </div><div class="parameters">
+                                        <div class="type">Parameters</div><div class="association">
                                                 <div class="key" style="width:5ch">
                                                     <div class="element symbol">type</div></div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <div class="element name">/bali/collections/Queue/v1</div>
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/collections/Queue/v1">/bali/collections/Queue/v1</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -449,12 +451,13 @@
                                                     <div class="element number">∞</div>
                                                 </div>
                                             </div>
-                                        </div><div class="parameters"><div class="association">
+                                        </div><div class="parameters">
+                                        <div class="type">Parameters</div><div class="association">
                                                 <div class="key" style="width:5ch">
                                                     <div class="element symbol">type</div></div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <div class="element name">/acme/types/Foo/v1.2.3</div>
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/acme/types/Foo/v1.2.3">/acme/types/Foo/v1.2.3</a></div>
                                                 </div>
                                             </div>
                                         </div>
