--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -177,12 +177,13 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><div class="parameters"><div class="association">
+                            </div><div class="parameters">
+                            <div class="type">Parameters</div><div class="association">
                                     <div class="key" style="width:5ch">
                                         <div class="element symbol">type</div></div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element name">/bali/collections/Set/v1</div>
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/collections/Set/v1">/bali/collections/Set/v1</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -206,12 +207,13 @@
                             <div class="element number">184.77 (currency: EUR)</div>
                         </div>
                     </div>
-                </div><div class="parameters"><div class="association">
+                </div><div class="parameters">
+                <div class="type">Parameters</div><div class="association">
                         <div class="key" style="width:5ch">
                             <div class="element symbol">type</div></div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element name">/acme/accounting/Transaction/v3.4</div>
+                            <div class="element name"><a href="https://bali-nebula.net/repository/names/acme/accounting/Transaction/v3.4">/acme/accounting/Transaction/v3.4</a></div>
                         </div>
                     </div>
                 </div>
