Modified the HTML generated by the formatter to enhance the readability of different element types.

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -17,7 +17,8 @@
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element text">"Jane Austen"</div>
+                            <pre class="element text">
+"Jane Austen"</pre>
                         </div>
                     </div>
                     <div class="association">
@@ -29,13 +30,16 @@
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <div class="element text">"Elizabeth Bennet"</div>
+                                    <pre class="element text">
+"Elizabeth Bennet"</pre>
                                 </div>
                                 <div class="item">
-                                    <div class="element text">"Emma Woodhouse"</div>
+                                    <pre class="element text">
+"Emma Woodhouse"</pre>
                                 </div>
                                 <div class="item">
-                                    <div class="element text">"Elinor Dashwood"</div>
+                                    <pre class="element text">
+"Elinor Dashwood"</pre>
                                 </div>
                             </div>
                         </div>
