--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"/>
-        <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"/>
+        <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico"/>
         <link rel="stylesheet" href="https://bali-nebula.net/static/styles/BDN.css">
     </head>
     <body>
