Updated the release to 2.5.3.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/x-icon" href="/static/images/Icon.ico">
-        <link rel="icon" type="image/x-icon" href="/static/images/Icon.ico">
-        <link rel="stylesheet" href="https://bali-nebula.net/static/styles/BDN.css">
-    </head>
+        <meta charset="UTF-8">        <link rel="stylesheet" href="https://bali-nebula.net/static/styles/BDN.css">
+        <link rel="apple-touch-icon" sizes="57x57" href="https://bali-nebula.net/static/icons/apple-icon-57x57.png">        <link rel="apple-touch-icon" sizes="60x60" href="https://bali-nebula.net/static/icons/apple-icon-60x60.png">        <link rel="apple-touch-icon" sizes="72x72" href="https://bali-nebula.net/static/icons/apple-icon-72x72.png">        <link rel="apple-touch-icon" sizes="76x76" href="https://bali-nebula.net/static/icons/apple-icon-76x76.png">        <link rel="apple-touch-icon" sizes="114x114" href="https://bali-nebula.net/static/icons/apple-icon-114x114.png">        <link rel="apple-touch-icon" sizes="120x120" href="https://bali-nebula.net/static/icons/apple-icon-120x120.png">        <link rel="apple-touch-icon" sizes="144x144" href="https://bali-nebula.net/static/icons/apple-icon-144x144.png">        <link rel="apple-touch-icon" sizes="152x152" href="https://bali-nebula.net/static/icons/apple-icon-152x152.png">        <link rel="apple-touch-icon" sizes="180x180" href="https://bali-nebula.net/static/icons/apple-icon-180x180.png">        <link rel="icon" type="image/png" sizes="192x192"  href="https://bali-nebula.net/static/icons/android-icon-192x192.png">        <link rel="icon" type="image/png" sizes="32x32" href="https://bali-nebula.net/static/icons/favicon-32x32.png">        <link rel="icon" type="image/png" sizes="96x96" href="https://bali-nebula.net/static/icons/favicon-96x96.png">        <link rel="icon" type="image/png" sizes="16x16" href="https://bali-nebula.net/static/icons/favicon-16x16.png">        <link rel="manifest" href="https://bali-nebula.net/static/icons/manifest.json">        <meta name="msapplication-TileColor" content="#ffffff">        <meta name="msapplication-TileImage" content="https://bali-nebula.net/static/icons/ms-icon-144x144.png">        <meta name="theme-color" content="#ffffff">    </head>
     <body>
         <div class="document">
             <div class="value">
@@ -643,7 +640,7 @@ DW411WRC0YS71NWKA93S
             </div>
         </div>
         <div class="poweredBy">
-            <img class="logo" src="https://bali-nebula.net/static/images/PoweredByLogo.png">
+            <img class="logo" src="https://bali-nebula.net/static/images/CraterDogIcon.png">
             <div class="company">Powered by Crater Dog Technologies™</div>
         </div>
     </body>
