Changed all text based expression operators to all uppercase to avoid name collisions with their intrinsic function counterparts.

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -48,7 +48,7 @@
                         <div class="colon">:</div>
                         <div class="value">
                             <pre class="element procedure">{
-    if suitor is "Mr. Darcy" then {
+    if suitor IS "Mr. Darcy" then {
         return true
     } else {
         return false
