Redesigned the Range class and made it an Element instead of a Collection to address the many issues that arose from the previous design.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -31,17 +31,6 @@
                     </div>
                     <div class="association">
                         <div class="key" style="width:12ch">
-                            <div class="element symbol">range</div>
-                        </div>
-                        <div class="colon">:</div>
-                        <div class="value">
-                            <div class="range">
-                                <div class="element number">-3</div>..<div class="element number">5</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="association">
-                        <div class="key" style="width:12ch">
                             <div class="element symbol">list</div>
                         </div>
                         <div class="colon">:</div>
@@ -190,7 +179,7 @@
                                                     </div>
                                                     <div class="colon">:</div>
                                                     <div class="value">
-                                                        <div class="element number">25 (range: [1..100])</div>
+                                                        <div class="element number">25 (range: 1..100)</div>
                                                     </div>
                                                 </div>
                                                 <div class="association">
@@ -632,6 +621,41 @@ DW411WRC0YS71NWKA93S
                                 </div>
                                 <div class="item">
                                     <div class="element moment">1962-04-01 06:31:60.726 (city: "Denver", region: "Colorado", country: "USA")</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">ranges</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            <div class="list">
+                                <div class="type">List</div>
+                                <div class="item">
+                                    <div class="element range">-3..5</div>
+                                </div>
+                                <div class="item">
+                                    <div class="element range">π..τ<div class="parameters">
+                                    <div class="type">Parameters</div><div class="association">
+                                            <div class="key" style="width:6ch">
+                                                <div class="element symbol">delta</div></div>
+                                            <div class="colon">:</div>
+                                            <div class="value">
+                                                <div class="element number">0.1</div>
+                                            </div>
+                                        </div>
+                                    </div></div>
+                                </div>
+                                <div class="item">
+                                    <div class="element range">0..</div>
+                                </div>
+                                <div class="item">
+                                    <div class="element range">..-1</div>
+                                </div>
+                                <div class="item">
+                                    <div class="element range">..</div>
                                 </div>
                             </div>
                         </div>
