Added a Sequence abstract type that Binary, Name, Range, Text, and Version elements inherit from.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -382,7 +382,7 @@
                                     <div class="colon">:</div>
                                     <div class="value">
                                         <pre class="element text">
-"value" (mediatype: "text")</pre>
+"value" (mediaType: "text")</pre>
                                     </div>
                                 </div>
                                 <div class="association">
