Removed Reserved element type since it isn't really needed.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -96,7 +96,7 @@
                                             <div class="element symbol">symbol</div>
                                         </div>
                                         <div class="item">
-                                            <div class="element reserved">$reserved-5</div>
+                                            <div class="element symbol">reserved-5</div>
                                         </div>
                                         <div class="item">
                                             <div class="element duration">3Y2M1D</div>
@@ -208,7 +208,7 @@
                                 <div class="type">Catalog</div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element reserved">$a</div>
+                                        <div class="element symbol">a-1</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -218,7 +218,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element reserved">$b</div>
+                                        <div class="element symbol">b-2</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -228,7 +228,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element reserved">$c</div>
+                                        <div class="element symbol">c-3</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
