--- a/test/html/components.html
+++ b/test/html/components.html
@@ -637,16 +637,7 @@ DW411WRC0YS71NWKA93S
                                     <div class="element range">-3..5</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">π..τ<div class="parameters">
-                                    <div class="type">Parameters</div><div class="association">
-                                            <div class="key" style="width:6ch">
-                                                <div class="element symbol">delta</div></div>
-                                            <div class="colon">:</div>
-                                            <div class="value">
-                                                <div class="element number">0.1</div>
-                                            </div>
-                                        </div>
-                                    </div></div>
+                                    <div class="element range">π..τ (delta: 0.1)</div>
                                 </div>
                                 <div class="item">
                                     <div class="element range">0..</div>
