Fixed several bugs in the Range element and Comparator when dealing with zero values that were being treated as undefined.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -640,13 +640,13 @@ DW411WRC0YS71NWKA93S
                                     <div class="element range">π..τ (delta: 0.1)</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">0..</div>
+                                    <div class="element range">0..∞</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">..-1</div>
+                                    <div class="element range">∞..-1</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">..</div>
+                                    <div class="element range">∞..∞</div>
                                 </div>
                             </div>
                         </div>
