Fixed bug in Catalog where a type parameter was not being integrated into the ancestry.

--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -7,7 +7,7 @@
         <div class="document">
             <div class="value">
                 <div class="catalog">
-                    <div class="type">Document</div>
+                    <div class="type">Contract</div>
                     <div class="association">
                         <div class="key" style="width:13ch">
                             <div class="element symbol">protocol</div>
@@ -150,7 +150,7 @@ A08XBV3FGK1P5GPM0RAZ9ZVG04XYVF3909XS9Z9SC0R
                             <div class="element symbol">type</div></div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/notary/Document/v1">/bali/notary/Document/v1</a></div>
+                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/notary/Contract/v1">/bali/notary/Contract/v1</a></div>
                         </div>
                     </div>
                 </div>
