Changed 'types' to 'abstractions' to be consistent with the bali naming and to avoid confusion with the bali meta types.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -362,7 +362,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <a class="element reference" href="https://bali-nebula.net/bali/types">bali-nebula.net/bali/types?foo=5&bar=false</a>
+                                        <a class="element reference" href="https://bali-nebula.net/bali/examples">bali-nebula.net/bali/examples?foo=5&bar=false</a>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -508,7 +508,7 @@
                                                     <div class="element symbol">type</div></div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/acme/types/Foo/v1.2.3">/acme/types/Foo/v1.2.3</a></div>
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/acme/examples/Foo/v1.2.3">/acme/examples/Foo/v1.2.3</a></div>
                                                 </div>
                                             </div>
                                         </div>
