--- a/test/html/components.html
+++ b/test/html/components.html
@@ -634,19 +634,19 @@ DW411WRC0YS71NWKA93S
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <div class="element range">-3..5</div>
+                                    <div class="range"><div class="element number">-3</div>..<div class="element number">5</div></div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">π..τ (delta: 0.1)</div>
+                                    <div class="range"><div class="element number">π</div>..<div class="element number">τ</div> (delta: 0.1)</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">0..∞</div>
+                                    <div class="range"><div class="element number">0</div>..</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">∞..-1</div>
+                                    <div class="range">..<div class="element number">-1</div></div>
                                 </div>
                                 <div class="item">
-                                    <div class="element range">∞..∞</div>
+                                    <div class="range">..</div>
                                 </div>
                             </div>
                         </div>
