Fixed bug in the formatting of complex numbers in polar form.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -418,7 +418,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element number">(5 e^~π i) (format: polar)</div>
+                                        <div class="element number">(5 e^~1.4i)</div>
                                     </div>
                                 </div>
                                 <div class="association">
