Renamed the element Percent to Percentage.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -124,7 +124,7 @@
                                             <div class="element probability">.5</div>
                                         </div>
                                         <div class="item">
-                                            <div class="element percent">75%</div>
+                                            <div class="element percentage">75%</div>
                                         </div>
                                         <div class="item">
                                             <div class="element number">undefined</div>
@@ -286,11 +286,11 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element percent">50%</div>
+                                        <div class="element percentage">50%</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element percent">20%</div>
+                                        <div class="element percentage">20%</div>
                                     </div>
                                 </div>
                                 <div class="association">
