Changed Reference to Resource and TYPE to LABEL in the language grammar.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -105,7 +105,7 @@
                                             <div class="element moment">2017-07-04</div>
                                         </div>
                                         <div class="item">
-                                            <a class="element reference" href="https://google.com/">google.com/</a>
+                                            <a class="element resource" href="https://google.com/">google.com/</a>
                                         </div>
                                         <div class="item">
                                             <div class="element version">v1.2.3</div>
@@ -358,11 +358,11 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <a class="element reference" href="https://craterdog.com/">craterdog.com/</a>
+                                        <a class="element resource" href="https://craterdog.com/">craterdog.com/</a>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <a class="element reference" href="https://bali-nebula.net/bali/examples">bali-nebula.net/bali/examples?foo=5&bar=false</a>
+                                        <a class="element resource" href="https://bali-nebula.net/bali/examples">bali-nebula.net/bali/examples?foo=5&bar=false</a>
                                     </div>
                                 </div>
                                 <div class="association">
