--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -49,7 +49,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <a class="element reference" href="mailto:jane.smith@gmail.com">jane.smith@gmail.com</a>
+                                        <a class="element resource" href="mailto:jane.smith@gmail.com">jane.smith@gmail.com</a>
                                     </div>
                                 </div>
                             </div>
