Split out Boolean from Probability and renamed TEXT to QUOTE.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -239,11 +239,11 @@
                                 <div class="association">
                                     <div class="key" style="width:35ch">
                                         <pre class="element text">
-"certain"</pre>
+"1."</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element probability">true</div>
+                                        <div class="element boolean">true</div>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -259,20 +259,20 @@
                                 <div class="association">
                                     <div class="key" style="width:35ch">
                                         <pre class="element text">
-"impossible"</pre>
+".0"</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element probability">false</div>
+                                        <div class="element boolean">false</div>
                                     </div>
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element probability">true</div>
+                                        <div class="element boolean">true</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element probability">false</div>
+                                        <div class="element boolean">false</div>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -281,7 +281,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element probability">true</div>
+                                        <div class="element boolean">true</div>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -526,7 +526,7 @@
     } else {
         throw exception
     }
-} (condition: /bali/elements/Probability/v1)</pre>
+} (condition: /bali/elements/Boolean/v1)</pre>
                                     </div>
                                 </div>
                             </div>
