Added '<..<', '<..' and '..<' to the existing '..' range operator.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -637,13 +637,16 @@ DW411WRC0YS71NWKA93S
                                     <div class="range"><div class="element number">-3</div>..<div class="element number">5</div></div>
                                 </div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">π</div>..<div class="element number">τ</div> (delta: 0.1)</div>
+                                    <div class="range"><div class="element number">π</div>&lt;..<div class="element number">τ</div> (delta: 0.1)</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">0</div>..</div>
+                                    <div class="range"><div class="element number">0</div>..&lt;</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range">..<div class="element number">-1</div></div>
+                                    <div class="range">..&lt;<div class="element number">-1</div></div>
+                                </div>
+                                <div class="item">
+                                    <div class="range">&lt;..&lt;</div>
                                 </div>
                                 <div class="item">
                                     <div class="range">..</div>
