Generalized lists and catalogs to allow expressions for their values.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -81,6 +81,9 @@
                                     <div class="list">
                                         <div class="type">List</div>
                                         <div class="item">
+                                            target
+                                        </div>
+                                        <div class="item">
                                             <div class="element pattern">any</div>
                                         </div>
                                         <div class="item">
@@ -263,7 +266,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element boolean">false</div>
+                                        <pre class="element procedure">size + 1</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -637,7 +640,7 @@ DW411WRC0YS71NWKA93S
                                     <div class="range"><div class="element number">-3</div>..<div class="element number">5</div></div>
                                 </div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">π</div>&lt;..<div class="element number">τ</div> (delta: 0.1)</div>
+                                    <div class="range"><div class="element number">π</div>&lt;..<div class="element number">τ</div></div>
                                 </div>
                                 <div class="item">
                                     <div class="range"><div class="element number">0</div>..&lt;</div>
